--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <small>Grade Average : <span class="avgGrade label label-default"></span></small>
         </h3>
     </div>
-    <div class="form group student-add-form pull-right col-sm-4 col-xs-12">
+    <div class="form-group student-add-form pull-right col-sm-4 col-xs-12">
         <h4>Add Student</h4>
         <div class="form-group input-group">
             <span class="input-group-addon">
