--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
         <button type="button" class="btn btn-success" onclick="addClicked()">Add</button>
         <button type="button" class="btn btn-default" onclick="cancelClicked()">Cancel</button>
+        <button type="button" class="btn btn-info" onclick="getData()">Get Data</button>
     </div>
     <div class="student-list-container col-sm-8 col-xs-12">
         <table class="student-list table table-striped">
