now displays to dom after adding to database and now deletes students from the dom and database

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
+    <title>SGT V2.0</title>
 </head>
 <body>
 <div class="container">
