--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
 <!doctype html>
-<html>
+<html ng-app="sgt">
 <head>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
-    <meta name="viewport" content="initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
+  <meta name="viewport" content="initial-scale=1, user-scalable=no">
 </head>
-<body>
-<div class="container">
+<body ng-controller="sgtController as sgtCtrl">
+  <div class="container">
     <div class="page-header">
-        <!-- only show this element when the isnt on mobile -->
-        <h1 class='hidden-xs'>Student Grade Table
-            <small>Grade Average : <span class="avgGrade label label-default"></span></small>
-        </h1>
-        <!-- only show this element when the user gets to a mobile version -->
-        <h3 class="visible-xs">Student Grade Table
-            <small>Grade Average : <span class="avgGrade label label-default"></span></small>
-        </h3>
+      <!-- only show this element when the isnt on mobile -->
+      <h1 class='hidden-xs'>Student Grade Table
+        <small>Grade Average : <span class="avgGrade label label-default"></span></small>
+      </h1>
+      <!-- only show this element when the user gets to a mobile version -->
+      <h3 class="visible-xs">Student Grade Table
+        <small>Grade Average : <span class="avgGrade label label-default"></span></small>
+      </h3>
     </div>
     <div class="form group student-add-form pull-right col-sm-4 col-xs-12">
-        <h4>Add Student</h4>
-        <div class="form-group input-group">
-            <span class="input-group-addon">
-                <span class="glyphicon glyphicon-user"></span>
-            </span>
-            <input type="text" class="form-control" name="studentName" id="studentName" placeholder="Student Name">
-        </div>
-        <div class="form-group input-group">
-            <span class="input-group-addon">
-                <span class="glyphicon glyphicon-list-alt"></span>
-            </span>
-            <input type="text" class="form-control" name="course" id="course"
-                   placeholder="Student Course">
-        </div>
-        <div class="form-group input-group">
-            <span class="input-group-addon">
-                <span class="glyphicon glyphicon-education"></span>
-            </span>
-            <input type="text" class="form-control" name="studentGrade" id="studentGrade"
-                   placeholder="Student Grade">
-        </div>
-        <button type="button" class="btn btn-success" onclick="addClicked()">Add</button>
-        <button type="button" class="btn btn-default" onclick="cancelClicked()">Cancel</button>
+      <h4>Add Student</h4>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-user"></span>
+        </span>
+        <input type="text" class="form-control" name="studentName" id="studentName" placeholder="Student Name" ng-model="sgtCtrl.student.name">
+      </div>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-list-alt"></span>
+        </span>
+        <input type="text" class="form-control" name="course" id="course"
+         placeholder="Student Course" ng-model="sgtCtrl.student.course">
+      </div>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-education"></span>
+        </span>
+        <input type="text" class="form-control" name="studentGrade" id="studentGrade"
+        placeholder="Student Grade" ng-model="sgtCtrl.student.grade">
+      </div>
+      <button type="button" class="btn btn-success" ng-click="sgtCtrl.addStudent()">Add</button>
+      <button type="button" class="btn btn-default" ng-click="sgtCtrl.clear()">Cancel</button>
     </div>
     <div class="student-list-container col-sm-8 col-xs-12">
-        <table class="student-list table table-striped">
-            <thead>
-            <tr>
-              <th>Student Name</th>
-              <th>Student Course</th>
-              <th>Student Grade</th>
-              <th>Operations</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+      <table class="student-list table table-striped">
+        <thead>
+        <tr>
+          <th>Student Name</th>
+          <th>Student Course</th>
+          <th>Student Grade</th>
+          <th>Operations</th>
+        </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="student in sgtCtrl.students">
+            <td>{{ student.name }}</td>
+            <td>{{ student.course }}</td>
+            <td>{{ student.grade }}</td>
+            <td><button class="btn btn-danger" ng-click="sgtCtrl.deleteStudent()" id="{{ student.id }}">Delete</button></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-</div>
+  </div>
 </body>
 </html>
