--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="page-header">
       <!-- only show this element when the isnt on mobile -->
       <h1 class='hidden-xs'>Student Grade Table
-        <small>Grade Average : <span class="avgGrade label label-default"></span></small>
+        <small>Grade Average : <span class="avgGrade label label-default">{{ sgtCtrl.avgGrade }}</span></small>
       </h1>
       <!-- only show this element when the user gets to a mobile version -->
       <h3 class="visible-xs">Student Grade Table
-        <small>Grade Average : <span class="avgGrade label label-default"></span></small>
+        <small>Grade Average : <span class="avgGrade label label-default">{{ sgtCtrl.avgGrade }}</span></small>
       </h3>
     </div>
     <div class="form group student-add-form pull-right col-sm-4 col-xs-12">
